<resources>
    <string name="app_name">Tradez Mobile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">Username</string>
    <string name="phone">Phone</string>
    <string name="re_type_password">Re Type Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="create_ad">Create Ad</string>
    <string name="view_profile">View Profile</string>
    <string name="about">About</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="sub_category">Category</string>
    <string name="add_video">Add Video</string>
    <string name="add_image">Add Image</string>
    <string name="contact">Contact Poster</string>
    <string name="search_ads">Search Ads</string>
</resources>
